tests/success/pointer_arithmetic_resolve4.bz
function test()
{
	(consteval {
		mut p: ?*S = null;
		if (p != null)
		{
			p -= 1;
		}
	});
}

struct S
{
	.i: int32;
}
