tests/error/comptime/pointer_difference_null2.bz
function test()
{
	(consteval {
		let p: ?*int32 = null;
		let i = 0;
		&i - p;
	});
}
